--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
+# mac crap
+.DS_Store
+# windows crap
+Thums.db
+ehthumbs.db
+
+# python bin
 *.pyc
+
+# vpn config files
 *.ovpn
 *.spec
+
+# build byproducts
 build
 dist
+
+# visual studio crap
+[Bb]in/
+[Oo]bj/
+[Dd]ebug/
+[Rr]elease/
+*.suo
+*.user
+*.ncb
