Made routing table cross check optional and configurable through the providers.json file

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@ ehthumbs.db
 *.ovpn
 *.spec
 
+# binaries
+utils/*.exe
+
+# sensitive files
+resources/provider.json
+
 # build byproducts
 build
 dist
